[project]
name = "comfyui-custom-nodes"
version = "0.1.0"
description = "A list of the custom nodes for ComfyUI"
authors = [
    {name = "moose-lab <mooseindiehackers@gmail.com>"}
]
license = {text = "BSD"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "svg.path>=4.1.0",
    "trimesh>=3.9.0",
    "solidpython>=1.1.0",
    "gmsh>=4.9.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
    "flake8>=4.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"